API cookies progress

--- a/client/index.html
+++ b/client/index.html
@@ -1,7 +1,9 @@
 <!doctype html>
-<html>
+<html lang="ru">
   <head>
     <meta charset="utf-8">
+    <meta name="description" content="Gooseberry.js">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Gooseberry.js</title>
   </head>
   <body>
